# fj

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  mypy.ini  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
doc/: .gitignore  api.rst  changelog.rst  cli.rst  conf.py  contents.rst  index.rst
src/fj/: __init__.py  __main__.py  _cache.py  _config.py  _context.py  _core.py  _install.py  _links.py  _meta.py  _pip.py  _pool.py  _subprocess.py  _zipapp.py  cli.py  virtualenv_plugin.py
src/fj/_cli/: __init__.py  _core.py  main.py
src/fj/_cli/_bootstrap/: __init__.py  context.py
src/fj/_solver/: __init__.py  _active.py  _direct.py  _pep503.py  _pool.py  _provider.py  _sdist.py  _source.py  _wheel.py  base.py  parser.py  solve.py
src/fj/_utils/: __init__.py  config.py  pip_wrapper.py  venv_wrapper.py  zipapp_wrapper.py
src/fj/ext/: __init__.py  _tox_plugin.py  _virtualenv_plugin.py  pip.py  sdist.py  source.py
src/fj/lib/: __init__.py  base.py  cache.py  distribution.py  install.py  installers.py  links.py  parser.py  pool.py  solve.py  wheel.py
src/fj/lib/_solver/: __init__.py  active.py  direct.py  pep503.py  pool.py  provider.py
test/: test_unit.py
