#


[bdist_zapp]
entry_point = fj.cli:main


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = fj application
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = fj
project_urls =
    GitHub = https://github.com/sinoroc/fj
    GitLab = https://gitlab.com/sinoroc/fj
url = https://pypi.org/project/fj/


[options]
package_dir =
    = src
packages = find:
python_requires = ~= 3.8


[options.entry_points]
console_scripts =
    fj = fj.cli:main
tox =
    fj = fj.tox_plugin [tox_plugin]
virtualenv.seed =
    fj = fj.virtualenv_plugin:FjVirtualenvSeeder [virtualenv_plugin]


[options.extras_require]
full =
    appdirs
    html5lib
    packaging
    pep517
    requests
    resolvelib
#
plugin_tox =
    tox
plugin_virtualenv =
    virtualenv
#
dev_package =
    twine
    wheel
    zapp
dev_test =
    mypy
    pytest
    pytest-mypy
    pytest-pydocstyle
    pytest-pycodestyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


# EOF
