#


[bdist_zapp]
entry_point = fj.cli:main


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = Pool installations of Python projects
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = fj
project_urls =
    GitHub = https://github.com/sinoroc/fj
    GitLab = https://gitlab.com/sinoroc/fj
url = https://pypi.org/project/fj/


[options]
package_dir =
    = src
packages = find:
python_requires = ~= 3.8


[options.entry_points]
console_scripts =
    fj = fj.cli:main
tox =
    fj = fj.tox_plugin [plugin_tox]
virtualenv.seed =
    fj = fj.virtualenv_plugin:FjVirtualenvSeeder [plugin_virtualenv]


[options.extras_require]
full =
    appdirs
    mousebender
    packaging
    pep517
    requests
    resolvelib
#
plugin_tox =
    tox
    %(full)s
plugin_virtualenv =
    virtualenv
    %(full)s
#
dev_package =
    twine
    wheel
    zapp
dev_test =
    mypy
    pytest
    pytest-mypy
    pytest-pydocstyle
    pytest-pycodestyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


# EOF
